syntax = "proto3";
package tendermint.spn.participation;

option go_package = "github.com/tendermint/spn/x/participation/types";

// Allocations used by a user for a specific auction
message AuctionUsedAllocations {
  string address = 1;
  uint64 auctionID = 2;
  uint64 numAllocations = 3;
  bool withdrawn = 4;
}
